alignment issue fixed with chrome browser

--- a/EventPublisher/src/main/webapp/styles/style.css
+++ b/EventPublisher/src/main/webapp/styles/style.css
@@ -84,7 +84,7 @@
 }
 
 .section1 {
-	width: 467px;
+	width: 466px;
 	height: 400px;
 	float: left;
 	padding: 5px 0 5px 5px;
@@ -98,7 +98,7 @@
 }
 
 .section3 {
-	width: 1134px;
+	width: 1133px;
 	height: 200px;
 	float: left;
 	padding: 5px 0 5px 5px;
